--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Shirin Nilizadeh, Ph.D.</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Shirin Nilizadeh!</h1>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+   <li><a href="mailto:nilizadeh@cs.ucsb.edu">email</a></li>
+        		<li><a href="https://github.com/nilizadeh">github.com/nilizadeh</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
