--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Nilizadeh.GitHub.io by nilizadeh</title>
+    <title>Shirin Nilizadeh</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Nilizadeh.GitHub.io</h1>
-        <p></p>
+        <h1>Shirin Nilizadeh, Ph.D.</h1>
+        <p>
+          Postdoctoral Researcher <br>
+          Computer Science Department<br>
+          University of California at Santa Barbara<br>
+          Member of Security Group (SecLab) at UCSB
+        </p>
 
 
         <p class="view"><a href="https://github.com/nilizadeh">View My GitHub Profile</a></p>
