--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <header>
         <h1>Shirin Nilizadeh, Ph.D.</h1>
         <p>
-          Postdoctoral Researcher <br>
+          <h3>Postdoctoral Researcher <br>
           Computer Science Department<br>
           University of California at Santa Barbara<br>
-          Member of Security Group (SecLab) at UCSB
+          Member of Security Group (SecLab) at UCSB</h3>
         </p>
 
 
