--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <header>
         <h1>Shirin Nilizadeh, Ph.D.</h1>
         <p>
-          <h3>Postdoctoral Researcher <br>
-          Computer Science Department<br>
-          University of California at Santa Barbara<br>
-          Member of Security Group (SecLab) at UCSB</h3>
+          <h3>Postdoctoral Researcher</h3> <br>
+         <h3> Computer Science Department </h3><br>
+          <h3> University of California at Santa Barbara</h3><br>
+         <h3> Member of Security Group (SecLab) at UCSB</h3>
         </p>
 
 
