--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <body>
     <div class="wrapper">
       <header>
+        <img align="left" src="shirin.jpg" width="250" height="250" />
         <h1>Shirin Nilizadeh, Ph.D.</h1>
         <p>
-          <h3>Postdoctoral Researcher</h3> <br>
+         <h3>Postdoctoral Researcher</h3> <br>
          <h3> Computer Science Department </h3><br>
           <h3> University of California at Santa Barbara</h3><br>
          <h3> Member of Security Group (SecLab) at UCSB</h3>
