--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <div class="wrapper">
       <header>
         <img align="left" src="shirin.jpg" width="250" height="250" />
-        <h1>Shirin Nilizadeh, Ph.D.</h1>
+        <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
-         <h3>Postdoctoral Researcher</h3> <br>
-         <h3> Computer Science Department </h3><br>
-          <h3> University of California at Santa Barbara</h3><br>
-         <h3> Member of Security Group (SecLab) at UCSB</h3>
+         <h3>Postdoctoral Researcher<br>
+             Computer Science Department<br>
+             <a href="www.ucsb.edu"> University of California at Santa Barbara </a>  <br>
+            
+             <a href="https://seclab.cs.ucsb.edu">Member of Security Group (SecLab) at UCSB </a></h3>
         </p>
 
 
