--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="250" height="250" />
+        <img align="left" src="shirin.jpg" width="100" height="100" hspace="20"/>
         <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
          <h3>Postdoctoral Researcher<br>
