--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p>
          <h3>Postdoctoral Researcher<br>
              Computer Science Department<br>
-             <a href="www.ucsb.edu"> University of California at Santa Barbara </a>  <br>
+             University of California at Santa Barbara  <br>
             
-             <a href="https://seclab.cs.ucsb.edu">Member of Security Group (SecLab) at UCSB </a></h3>
+             <b><a href="https://seclab.cs.ucsb.edu">Security Group (SecLab)</a></b></h3>
         </p>
 
 
