--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/>
         <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
-         <h3>Postdoctoral Researcher</p>
-          <p>   Computer Science Department<br>
+         <h3>Postdoctoral Researcher<br>
+             Computer Science Department<br>
              University of California at Santa Barbara  <br>
             
              <b><a href="https://seclab.cs.ucsb.edu">Security Group (SecLab)</a></b></h3>
