--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
          <h3>Postdoctoral Researcher<br>
-             Computer Science Department<br>
-             University of California at Santa Barbara  <br>
-            
              <b><a href="https://seclab.cs.ucsb.edu">Security Group (SecLab)</a></b></h3>
+             Computer Science Department<br>
+             UC at Santa Barbara  <br>
         </p>
 
       </header>
