--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
          <h3>Postdoctoral Researcher<br>
-             <b><a href="https://seclab.cs.ucsb.edu">Security Group (SecLab)</a></b></h3>
+             <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b>
              Computer Science Department<br>
-             UC at Santa Barbara  <br>
+             UC at Santa Barbara  <br></h3>
         </p>
 
       </header>
