--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/>
         <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
         <p>
-         <h3>Postdoctoral Researcher</p></h3>
-          <p><h3> <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b> <br>
+         <h3>Postdoctoral Researcher</h3>
+         <h3> <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b> <br>
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
         </p>
