--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
+<p>August 2015: Joint Seclab at UCSB <br>
+July 2015: Joint the Program Committee of WWW 2016 <br>
+July 2015: Joint the Program Committee of PETS 2016 <br>
+June 2015: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
+July 2014: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
+October 2014: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
+June 2014: Successfully defended my Ph.D. dissertation</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
