--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="wrapper">
       <header>
         <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/>
-        <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
+       <p> <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
+       <h3>Postdoctoral Researcher<br> </p>
         <p>
-         <h3>Postdoctoral Researcher<br>
          <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b> <br>
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
