--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/>
-       <p> <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1>
-       <h3>Postdoctoral Researcher<br> </p>
+        <img align="left" src="shirin.jpg" width="150" height="150" hspace="60"/>
+       <p> <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1> 
+       <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
          <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b> <br>
              Computer Science Department<br>
