--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h3>
 
-<p>August 2015: Joint Seclab at UCSB <br>
-July 2015: Joint the Program Committee of WWW 2016 <br>
-July 2015: Joint the Program Committee of PETS 2016 <br>
-June 2015: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
-July 2014: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
-October 2014: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
-June 2014: Successfully defended my Ph.D. dissertation</p>
+<p>
+<b>August 2015</b>: Joint Seclab at UCSB <br>
+<b>July 2015</b>: Joint the Program Committee of WWW 2016 <br>
+<b>July 2015</b>: Joint the Program Committee of PETS 2016 <br>
+<b>June 2015</b>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
+<b>July 2014</b>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
+<b>October 2014</b>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
+<b>June 2014</b>: Successfully defended my Ph.D. dissertation</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
