--- a/index.html
+++ b/index.html
@@ -27,20 +27,35 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h3>
+<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h3></font>
 
 <p>
-<b>August 2015</b>: Joint Seclab at UCSB <br>
-<b>July 2015</b>: Joint the Program Committee of WWW 2016 <br>
-<b>July 2015</b>: Joint the Program Committee of PETS 2016 <br>
-<b>June 2015</b>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
-<b>July 2014</b>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
-<b>October 2014</b>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
-<b>June 2014</b>: Successfully defended my Ph.D. dissertation</p>
+<strong>August 2015</strong>: Joint Seclab at UCSB <br>
+<strong>July 2015</strong>: Joint the Program Committee of WWW 2016 <br>
+<strong>July 2015</strong>: Joint the Program Committee of PETS 2016 <br>
+<strong>June 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
+<strong>July 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
+<strong>October 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
+<strong>June 2014</strong>: Successfully defended my Ph.D. dissertation</p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3></font>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>
+Ph.D. in Security Informatics, September 2014
+School of Informatics and Computing
+Indiana Univeristy Bloomington
+Dissertation: Privacy-aware Decentralized Architectures for Socially Networked Systems 
+Adviser: Professor Apu Kapadia </p>
+
+<p>M.Sc. in Information Security, February 2007
+Computer Engineering and Information Technology
+Amirkabir University of Technology
+Thesis title : Representing Linear approximations of Block Ciphers Using Graph Modeling
+Adviser: Professor Babak Sadeghian</p>
+
+<p>B.Sc. in Computer Engineering, June 2004 
+Department of Computer Engineering
+Islamic Azad University at Najafabad</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
