--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="150" height="150" hspace="60"/>
+        <img align="left" src="shirin.jpg" width="150" height="150" hspace="50"/>
        <p> <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
-         <b><a href="https://seclab.cs.ucsb.edu">@SecLab</a></b> <br>
+        <h3><strong><a href="https://seclab.cs.ucsb.edu">@SecLab</a></strong> <br>
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
         </p>
