--- a/index.html
+++ b/index.html
@@ -26,54 +26,54 @@
 
       </header>
       <section>
-        <h3>
-<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h3></font>
+        <h2>
+<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h2></font>
 
 <p>
-<strong>August 2015</strong>: Joint Seclab at UCSB <br>
-<strong>July 2015</strong>: Joint the Program Committee of WWW 2016 <br>
-<strong>July 2015</strong>: Joint the Program Committee of PETS 2016 <br>
-<strong>June 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
-<strong>July 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
-<strong>October 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
-<strong>June 2014</strong>: Successfully defended my Ph.D. dissertation</p>
-<h3>
-<font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3></font>
+<strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
+<strong>Jul 2015</strong>: Joint the Program Committee of WWW 2016 <br>
+<strong>Jul 2015</strong>: Joint the Program Committee of PETS 2016 <br>
+<strong>Jun 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
+<strong>Jul 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
+<strong>Oct 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
+<strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>
+<h2>
+<font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2></font>
 
 <p>
-Ph.D. in Security Informatics, September 2014
-School of Informatics and Computing
-Indiana Univeristy Bloomington
-Dissertation: Privacy-aware Decentralized Architectures for Socially Networked Systems 
-Adviser: Professor Apu Kapadia </p>
+Ph.D. in Security Informatics, Sep 2014 <br>
+School of Informatics and Computing <br>
+Indiana Univeristy Bloomington <br>
+Dissertation: Privacy-aware Decentralized Architectures for Socially Networked Systems <br>
+Adviser: Prof. Apu Kapadia </p>
 
-<p>M.Sc. in Information Security, February 2007
-Computer Engineering and Information Technology
-Amirkabir University of Technology
-Thesis title : Representing Linear approximations of Block Ciphers Using Graph Modeling
-Adviser: Professor Babak Sadeghian</p>
+<p>M.Sc. in Information Security, Feb 2007 <br>
+Computer Engineering and Information Technology <br>
+Amirkabir University of Technology <br>
+Thesis title :Linear approximations Representation of Block Ciphers <br>
+Adviser: Prof. Babak Sadeghian</p> 
 
-<p>B.Sc. in Computer Engineering, June 2004 
+<p>B.Sc. in Computer Engineering, Jun 2004 
 Department of Computer Engineering
 Islamic Azad University at Najafabad</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p></p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h2>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h2>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p></p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
