--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
         <h2>
-<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</h2></font>
+<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</font></h2>
 
 <p>
 <strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
@@ -38,7 +38,7 @@
 <strong>Oct 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
 <strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>
 <h2>
-<font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2></font>
+<font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</font></h2>
 
 <p>
 Ph.D. in Security Informatics, Sep 2014 <br>
@@ -58,17 +58,17 @@ Department of Computer Engineering
 Islamic Azad University at Najafabad</p>
 
 <h2>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h2>
+<font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h2>
 
 <p></p>
 
 <h2>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
+<font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h2>
 
 <p></p>
 
 <h2>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h2>
+<font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h2>
 
 <p></p>
       </section>
