--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/>
+        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40" vspace="40"/>
        <p> <h1><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
@@ -23,6 +23,8 @@
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
         </p>
+        <p><h4>Email: nilizadeh<at>cs<dot>ucsb<dot>edu <br>
+           Office:  Harold Frank Hall, UCSB, Room 2114 </h4></p>
 
       </header>
       <section>
