--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div class="wrapper">
       <header>
         <img align="left" src="shirin.jpg" width="150" height="150" hspace="40" vspace="40"/>
-       <p> <h2><font color="#990000">Shirin Nilizadeh, Ph.D.</font></h2> 
+       <p> <h1><font color="#990000">Shirin Nilizadeh</font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
         <h3><strong><a href="https://seclab.cs.ucsb.edu">@SecLab</a></strong> <br>
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
         </p>
-        <p><h4>Email: nilizadeh<at>cs<dot>ucsb<dot>edu <br>
-           Office:  Harold Frank Hall, UCSB, Room 2114 </h4></p>
+        <p><h4>Email: nilizadeh &lt;<at> &gt;cs &lt;<dot>&gt;ucsb&lt;<dot>&gt;edu <br>
+           Office:  Harold Frank Hall Room 2114 </h4></p>
 
       </header>
       <section>
