--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
              Computer Science Department<br>
              UC at Santa Barbara  <br></h3>
         </p>
-        <p><h4>Email: nilizadeh &lt;<at> &gt;cs &lt;<dot>&gt;ucsb&lt;<dot>&gt;edu <br>
-           Office:  Harold Frank Hall Room 2114 </h4></p>
+        <p><h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
+           Office:  Harold Frank Hall, Room 2114 </h4></p>
 
       </header>
       <section>
