--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40" vspace="40"/>
-       <p> <h1><font color="#990000">Shirin Nilizadeh</font></h1> 
+        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/> <br>
+       <p> <h1><font color="#990000">Shirin Nilizadeh, PhD </font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
         <h3><strong><a href="https://seclab.cs.ucsb.edu">@SecLab</a></strong> <br>
