--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/> <br>
+       <p> <img align="left" src="shirin.jpg" width="150" height="150" hspace="40" vspace="40"/> </p> <br>
        <p> <h1><font color="#990000">Shirin Nilizadeh, PhD </font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
