--- a/index.html
+++ b/index.html
@@ -62,23 +62,21 @@ Islamic Azad University at Najafabad</p>
 <h2>
 <font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h2>
 
-<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "Community-Enhanced De-anonymization of Online Social Networks," To appear in the 21st ACM Conference on Computer and Communications Security (CCS ’14), Scottsdale, Arizona, USA, November 3–7, 2014. (Acceptance rate: 19%) [bibtex][ppt] <br>
+<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "Community-Enhanced De-anonymization of Online Social Networks," To appear in the 21st ACM Conference on Computer and Communications Security (CCS ’14), Scottsdale, Arizona, USA, November 3–7, 2014. (Acceptance rate: 19%) [bibtex][ppt] </p>
 
 Shirin Nilizadeh, "Privacy-aware Decentralized Architectures for Socially Networked Systems", Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][bibtex] <br>
 
-Vaibhav Garg and Shirin Nilizadeh, "Craigslist Scams and Community Composition: Investigating Online Fraud Victimization", IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [bibtex][ieee] <br>
+Vaibhav Garg and Shirin Nilizadeh, "Craigslist Scams and Community Composition: Investigating Online Fraud Victimization", IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [bibtex][ieee] </p>
 
-Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [bibtex][acm sigcomm][acm][ppt] <br>
+Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [bibtex][acm sigcomm][acm][ppt] </p>
 
-Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks", The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [bibtex][ieee][ppt] <br>
+Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks", The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [bibtex][ieee][ppt] </p>
 
-Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search'', In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [pdf] [bib][acm][ppt] <br>
+Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search'', In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [pdf] [bib][acm][ppt] </p>
 
-S. Nilizadeh, N. Alam, N. Husted, and A. Kapadia. ''Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [bib][iu-link] <br>
+S. Nilizadeh, N. Alam, N. Husted, and A. Kapadia. ''Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [bib][iu-link] </p>
 
-S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamagar Block Cipher," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) <br>
-
-</p>
+S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamagar Block Cipher," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) </p>
 
 <h2>
 <font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h2>
