--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
        <p> <h1><font color="#990000">Shirin Nilizadeh, PhD </font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
-        <h3><strong><a href="https://seclab.cs.ucsb.edu">@SecLab</a></strong> <br>
-             Computer Science Department<br>
-             UC at Santa Barbara  <br></h3>
+        <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
+            <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
+            <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
         <p><h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 </h4></p>
