--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
        <p> <h1><font color="#990000">Shirin Nilizadeh, PhD </font></h1> 
        <h2>Postdoctoral Researcher<br> </h2> </p>
         <p>
-        <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
+        <h2><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
-            <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
+            <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h2>
         </p>
         <p><h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 </h4></p>
@@ -81,28 +81,28 @@ S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamag
 <h2>
 <font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h2>
 
-<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program”, The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [Slides] <br>
+<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program”, The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [Slides] </p>
 
-“Community-Enhanced De-anonymization of Online Social Networks,” The 21st ACM Conference on Computer and Communications Security (CCS’14), Scottsdale, Arizona, USA, November 3-7, 2014. [Slides] <br>
+<p> “Community-Enhanced De-anonymization of Online Social Networks,” The 21st ACM Conference on Computer and Communications Security (CCS’14), Scottsdale, Arizona, USA, November 3-7, 2014. [Slides] </p>
 
-“Privacy-aware Decentralized Architectures for Socially Networked Systems,” Student Knowledge Exchange on Technical Aspects of Privacy, University of Notre Dame, September 2013. [Slides] <br>
+<p> “Privacy-aware Decentralized Architectures for Socially Networked Systems,” Student Knowledge Exchange on Technical Aspects of Privacy, University of Notre Dame, September 2013. [Slides] </p>
 
-“Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search,” 2011 ACM Workshop on Privacy in the Electronic Society (WPES ’11), Chicago, Illinois, October 2011. [Slides]<br>
+<p>“Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search,” 2011 ACM Workshop on Privacy in the Electronic Society (WPES ’11), Chicago, Illinois, October 2011. [Slides]</p>
 
-“Linear Approximations Representation of Moamagar Block Cipher,” 12th International Conference on Computer Science (CSICC), Shahid Beheshti University (SBU), Tehran, Iran, February 2007. [Slides]</p>
+<p> “Linear Approximations Representation of Moamagar Block Cipher,” 12th International Conference on Computer Science (CSICC), Shahid Beheshti University (SBU), Tehran, Iran, February 2007. [Slides]</p>
 
 <h2>
 <font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h2>
 
-<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks", Women in Cyber Security, April 2014. [pdf] <br>
+<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks", Women in Cyber Security, April 2014. [pdf] </p>
 
-Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", Grace Hopper Celebration of Women in Computing, 2012.[pdf]<br>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", Grace Hopper Celebration of Women in Computing, 2012.[pdf]</p>
 
-Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks", Indiana Celebration of Women in Computing (InWIC), 2012. [pdf] [Winner of Best Graduate Poster Award] <br>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks", Indiana Celebration of Women in Computing (InWIC), 2012. [pdf] [Winner of Best Graduate Poster Award] </p>
 
-Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection", Graduate cohort workshop, Boston, 2011. <br>
+<p> Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection", Graduate cohort workshop, Boston, 2011. </p>
 
-Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark", Indiana Celebration of Women in Computing (InWIC), 2010. [pdf] [Runner up for the Best Graduate Poster Award]</p>
+<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark", Indiana Celebration of Women in Computing (InWIC), 2010. [pdf] [Runner up for the Best Graduate Poster Award]</p>
       </section>
       <footer>
         
