--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h2>
         </p>
+        <br>
+        <h3> Contact Info:</h3> <br>
         <p><h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 </h4></p>
 
@@ -43,26 +45,28 @@
 <font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</font></h2>
 
 <p>
-Ph.D. in Security Informatics, Sep 2014 <br>
+<strong>Ph.D. in Security Informatics, Sep 2014 </strong> <br>
 School of Informatics and Computing <br>
 Indiana Univeristy Bloomington <br>
 Dissertation: Privacy-aware Decentralized Architectures for Socially Networked Systems <br>
-Adviser: Prof. Apu Kapadia </p>
+Adviser: Prof. <a href="http://www.cs.indiana.edu/~kapadia/">Apu Kapadia </a></p>
 
-<p>M.Sc. in Information Security, Feb 2007 <br>
+<p>
+<strong> M.Sc. in Information Security, Feb 2007 </strong><br>
 Computer Engineering and Information Technology <br>
 Amirkabir University of Technology <br>
-Thesis title :Linear approximations Representation of Block Ciphers <br>
-Adviser: Prof. Babak Sadeghian</p> 
+Thesis title: Linear approximations Representation of Block Ciphers <br>
+Adviser: <a href="http://www.aut.ac.ir/official/main.asp?uid=basadegh">Prof. Babak Sadeghian</a></p> 
 
-<p>B.Sc. in Computer Engineering, Jun 2004 
-Department of Computer Engineering
+<p>
+<strong> B.Sc. in Computer Engineering, Jun 2004 </strong> <br>
+Department of Computer Engineering <br>
 Islamic Azad University at Najafabad</p>
 
 <h2>
 <font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h2>
 
-<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "Community-Enhanced De-anonymization of Online Social Networks," To appear in the 21st ACM Conference on Computer and Communications Security (CCS ’14), Scottsdale, Arizona, USA, November 3–7, 2014. (Acceptance rate: 19%) [bibtex][ppt] </p>
+<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," 21st ACM Conference on Computer and Communications Security (CCS ’14), Scottsdale, Arizona, USA, November 3–7, 2014. (Acceptance rate: 19%) [bibtex][ppt] </p>
 
 Shirin Nilizadeh, "Privacy-aware Decentralized Architectures for Socially Networked Systems", Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][bibtex] <br>
 
