--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h2>
         </p>
         <br>
-        <h3> Contact Info:</h3> <br>
-        <p><h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
-           Office:  Harold Frank Hall, Room 2114 </h4></p>
+        <h3> Contact Info:</h3>
+        <h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
+           Office:  Harold Frank Hall, Room 2114 </h4>
 
       </header>
       <section>
