--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Islamic Azad University at Najafabad</p>
 <h2>
 <font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h2>
 
-<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," 21st ACM Conference on Computer and Communications Security (CCS ’14), Scottsdale, Arizona, USA, November 3–7, 2014. (Acceptance rate: 19%) [bibtex][ppt] </p>
+<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppt/deAnon-ccs-2014.pptx">ppt</a>] </p>
 
 Shirin Nilizadeh, "Privacy-aware Decentralized Architectures for Socially Networked Systems", Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][bibtex] <br>
 
