--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h2>
         </p>
         <br>
-        <h3> Contact Info:</h3>
-        <h4>Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
+        <h4> Contact Info: <br>
+        Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 </h4>
 
       </header>
