--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <strong>Jul 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
 <strong>Oct 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
 <strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>
+  </section>
+    <section>
 <h2>
 <font color="#990000"><a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</font></h2>
 
