--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="wrapper">
       <header>
        <p> <img align="left" src="shirin.jpg" width="150" height="150" hspace="40"/> </p> <br style="clear:both" />
-       <p> <h1><font color="#990000">Shirin Nilizadeh, PhD </font></h1> 
-       <h2>Postdoctoral Researcher<br> </h2> </p>
+       <p> <h2><font color="#990000">Shirin Nilizadeh, Ph.D. </font></h2> 
+       <h3>Postdoctoral Researcher<br> </h3> </p>
         <p>
-        <h2><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
+        <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
-            <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h2>
+            <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
         <br>
         <h4> Contact Info: <br>
