--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
       </header>
       <section>
-        <h2>
-<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</font></h2>
+        <h3>
+<font color="#990000"><a id="news" class="anchor" href="#Latest News" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest News</font>
+</h3>
 
 <p>
 <strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
@@ -65,8 +66,10 @@ Adviser: <a href="http://www.aut.ac.ir/official/main.asp?uid=basadegh">Prof. Bab
 Department of Computer Engineering <br>
 Islamic Azad University at Najafabad</p>
 
-<h2>
-<font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h2>
+  </section>
+    <section>
+<h3>
+<font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
 
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">ppt</a>] </p>
 
@@ -83,9 +86,10 @@ Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "Pythia: A Pri
 S. Nilizadeh, N. Alam, N. Husted, and A. Kapadia. ''Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [bib][iu-link] </p>
 
 S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamagar Block Cipher," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) </p>
-
-<h2>
-<font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h2>
+  </section>
+    <section>
+<h3>
+<font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h3>
 
 <p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program”, The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [Slides] </p>
 
@@ -96,9 +100,10 @@ S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamag
 <p>“Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search,” 2011 ACM Workshop on Privacy in the Electronic Society (WPES ’11), Chicago, Illinois, October 2011. [Slides]</p>
 
 <p> “Linear Approximations Representation of Moamagar Block Cipher,” 12th International Conference on Computer Science (CSICC), Shahid Beheshti University (SBU), Tehran, Iran, February 2007. [Slides]</p>
-
-<h2>
-<font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h2>
+  </section>
+    <section>
+<h3>
+<font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h3>
 
 <p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks", Women in Cyber Security, April 2014. [pdf] </p>
 
