--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
 <p>
-  I am a Postdoctoral Researcher at University of California at Santa Barbara. I received my Ph.D. in Security Informatics from the Indiana University Bloomington (IUB) in September 2014. 
-  Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University as a Post-Doctoral Researcher. <br>
- I am interested in topics intersecting ‘Security and Privacy’ and ‘Network Science’. I am particularly interested in Security and Privacy in Online Social Networks and Peer-to-Peer Networks, Privacy and Anonymity in Big Data, Applied Cryptography, Applied Machine Learning and Data Mining. 
+  I am currently a postdoctoral researcher at Security Group (seclab) at UCSB. I received my Ph.D. in Security Informatics from IUB in September 2014. 
+  Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University as a Post-Doctoral Researcher. </p><br>
+<p>  
+ I am interested in topics intersecting ‘Security and Privacy’ and ‘Network Science’. 
+ I am particularly interested in Security and Privacy in Online Social Networks and Peer-to-Peer Networks, Privacy and Anonymity in Big Data, Applied Cryptography, Applied Machine Learning and Data Mining. 
  
 </p>
 </section>
