--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </h3>
 <p>
   I am currently a postdoctoral researcher at Security Group (seclab) at UCSB. I received my Ph.D. in Security Informatics from IUB in September 2014. 
-  Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University as a Post-Doctoral Researcher. </p>
+  Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at IUB as a Post-Doctoral Researcher. </p>
 <p>  
  I am interested in topics intersecting ‘Security and Privacy’ and ‘Network Science’. 
  I am particularly interested in Security and Privacy in Online Social Networks and Peer-to-Peer Networks, Privacy and Anonymity in Big Data, Applied Cryptography, Applied Machine Learning and Data Mining. 
