--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@ Islamic Azad University at Najafabad</p>
 
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">ppt</a>] </p>
 
-Shirin Nilizadeh, "Privacy-aware Decentralized Architectures for Socially Networked Systems", Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][bibtex] <br>
+Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][bibtex] <br>
 
-Vaibhav Garg and Shirin Nilizadeh, "Craigslist Scams and Community Composition: Investigating Online Fraud Victimization", IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [bibtex][ieee] </p>
+Vaibhav Garg and Shirin Nilizadeh, "<a href="papers/nilizadeh-craigslist-iwcc13.pdf">Craigslist Scams and Community Composition: Investigating Online Fraud Victimization</a>," IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [bibtex][ieee] </p>
 
-Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [bibtex][acm sigcomm][acm][ppt] </p>
+Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-cachet-conext12.pdf">Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching</a>," In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [bibtex][acm sigcomm][acm][ppt] </p>
 
-Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks", The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [bibtex][ieee][ppt] </p>
+Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-decent-sesoc12.pdf">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</a>," The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [bibtex][ieee][ppt] </p>
 
-Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search'', In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [pdf] [bib][acm][ppt] </p>
+Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "<a href="papers/nilizadeh-pythia-wpes11.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [pdf] [bib][acm][ppt] </p>
 
-S. Nilizadeh, N. Alam, N. Husted, and A. Kapadia. ''Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [bib][iu-link] </p>
+S. Nilizadeh, N. Alam, N. Husted, and A. Kapadia. "<a href="papers/nilizadeh-pythia-techReport10.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [bib][iu-link] </p>
 
-S. Nilizadeh, and B. Sadeghiyan, "Linear Approximations Representation of Moamagar Block Cipher," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) </p>
+S. Nilizadeh, and B. Sadeghiyan, "<a href="papers/nilizadeh-linear-cryotanalysis.pdf">Linear Approximations Representation of Moamagar Block Cipher</a>," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) </p>
   </section>
     <section>
 <h3>
