--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Islamic Azad University at Najafabad</p>
 
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">ppt</a>] </p>
 
-<p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [pdf][<a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
+<p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. <a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
 
 <p>Vaibhav Garg and Shirin Nilizadeh, "<a href="papers/nilizadeh-craigslist-iwcc13.pdf">Craigslist Scams and Community Composition: Investigating Online Fraud Victimization</a>," IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [<a href="bibs/garg2013craigslist.bib">bibtex</a>][ieee] </p>
 
@@ -94,7 +94,7 @@ Islamic Azad University at Najafabad</p>
 
 <p>Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-decent-sesoc12.pdf">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</a>," The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [<a href="bibs/decent-sesoc.bib">bibtex</a>][ieee][ppt] </p>
 
-<p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "<a href="papers/nilizadeh-pythia-wpes11.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [pdf] [<a href="bibs/">bibtex</a>][acm][ppt] </p>
+<p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "<a href="papers/nilizadeh-pythia-wpes11.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [<a href="bibs/">bibtex</a>][acm][ppt] </p>
 
 <p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia. "<a href="papers/nilizadeh-pythia-techReport10.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [<a href="bibs/TR687.bib">bibtex</a>][iu-link] </p>
 
